[package]
name = "sycamore-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8.2", features = ["suspense"] }
gloo-timers = { version = "0.2.4", features = ["futures"] }
getrandom = { version = "0.2.7", features = ["js"]}
rand = { version = "0.8.5" }